@@ -17,6 +17,9 @@
     be moved to or from as with other targets.  (UPDATE README)
   - Rename "rightline" to "tail", "leftline" to "head".
   - Fix "selection" command.
+  - New instruction "next" and "preve": Select the next or previous
+    instance of a target.  Currently only matches the string content
+    of the target.
 - Talon bindings: Add "word" escape to add a single word to the value
   stack.
 
